- Editor has a new view to configure project properties
- Kink tag list added to project configuration describing all kinks used in the 
  project.
- Target verision and project version added to project configuration describing
  the project's version and the engine version the project was saved in.
- Support for key bindings added and settings expanded.
- Project-Player can be paused.
- Projects can now be exported as a bundle, packing all resources in a single
  file.
- Added PlayerMetronome component to player and editor.
- Option to pause Player automativally if app is not currently active.

Updated Features:
- Upgrade to Qt5.14.2 with msvc2017 for more QJSEngine and QML features.
  -> Recompiled dependant libraries.
- Changed card selection backend to QML and greatly improved card display.
- Changed Project-Player backend to QML and improved overall look.
- New resource types added: Script and Database
  -> Resources of type Other in old projects will be reassigned on project
     load if needed.
- Changed syntax highlighting in editor to new backend.
  -> Highlighter can now be styled.
- PlayerTextBox text alignment can now be set to either Left, Right or Center.
- PlayerTextBox can now display a portrait next to the text. This portrait
  can be any Image or Movie type Resource.
- Styles have been updated.

Changes:
- In-Game title changed to JOIP Engine.
- Reworked editor models to work more consistently.
- Reworked project naming restrictions to work on all future supported
  systems.
- Code editor displays special info-text if no scripts are available.
- Removed WebEngine because of the overhead of using it.
- Changed build system from QMake to CMake.
- Reworked overlays. Overlays are using a manager to determine z-order.
- Fullscreen mode is on by default.

Fixed Bugs:
- Timer interval bug fixed; the timer doesn't run longer than expected anymore.
- Fixed OpenGL issues that prevented menus to be opened.
- Fixed multiple issues with editor code overlays.