@@ -17,11 +17,14 @@ public:
   ~CSceneNodeModelWidget();
 
   void SetName(const QString& sName);
+  void SetScriptButtonEnabled(bool bEnabled);
 
 signals:
+  void SignalAddScriptFileClicked();
   void SignalNameChanged(const QString& sName);
 
 protected slots:
+  void on_AddScriptFile_clicked();
   void on_pSceneNameLineEdit_editingFinished();
 
 private:
